--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "author": "luong",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.13.2",
     "nodemon": "^3.1.9",
     "view-engine": "^1.1.1"
   },
